	PR c++/2862, c++/2863 	* pt.c (determine_specialization): Compare the length of 	TYPE_ARG_TYPES.  Tidy.

* g++.dg/template/instantiate2.C: New test.
	* g++.dg/template/spec4.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55527 138bc75d-0d04-0410-961f-82ee72b054a4